src/objects/ffct__ComponentCountInfo__c.object
<CustomObject>
    <description>Used by the Pre Upgrade Package tool.</description>
    <fields>
        <fullName>ffct__AdditionalDetails__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffct__Parent__c</fullName>
        <label>Parent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__ReleasePackage__c</fullName>
        <label>Release Package</label>
        <referenceTo>ffct__ReleasePackage__c</referenceTo>
        <relationshipLabel>Component Count Information</relationshipLabel>
        <relationshipName>ComponentCountInfos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Component Count Information</label>
    <nameField>
        <label>Component Count Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component Count Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>